- Enable terminal mode in OS/2 by explicitly checking for and using os2term library.
- Getting WAV/AU/CDR writing back to a sane state while still catching out-of-disk when writing headers (none in case of CDR) but removing that initial test that prevented writing on any non-seekable file (like, /dev/stdout to a pipe).

TODO: fix/describe logic for changing input format (multiple headers in non-seekable streams)

1.14.4
---

Who reworks a parsing and data mangling without really making sure that things still work like before? I hope I won't do so in future. Not again.

- Fix resync logic to properly work again (used to prematurely end stream on bad headers). A regression again, this sucks, but at least we got a regression test for that now.
- Fix aeon-old regression (since 1.11.0) about short seeks: Bit reservoir was reset also for short seeks that did not break continuity.
- Another damned regression got fixed: Sample-accurate seek for files without full gapless info.

1.14.3
---
- Fix regression from 1.14.1 in parsing of bad free format streams, avoiding apparently endless loops (just very slow reading, in fact).

1.14.2
---
- Fix writing of WAV to stdout.
  It is still not the best of ideas to do so, though. At least make sure to fix rate and channels.

1.14.1
---
- Fix subtle bug that could trigger failure to detect a format change on resync when using libmpg123's feeder API.
  That bug has been there since ages but was neutralized by other (buggy) behaviour of the parser before the little overhaul. The Law of an Even Number of Bugs.

1.14.0
---
- libmpg123 API version 36 (see NEWS.libmpg123)
- Add --ignore-streamlength.
- But also deal with concatenated (Frankenstein) streams: Not applying gapless cutting once we're over the announced number of frames.
- Also, gapless cutting is only applied if relevant information is present. Previously, at least the decoder delay has been cut.
- Add --lyrics for printout of lyrics (from USLT in ID3v2).